--- a/index.html
+++ b/index.html
@@ -64,13 +64,15 @@
       <section>
         <h2>What are we doing</h2>
         <ul>
-          <li><img src="/images/computer.jpg" alt="computer" width="360" /></li>
           <li
-            ><img src="/images/mobilephone.jpg" alt="mobile phone" width="360"
+            ><img src="./images/computer.jpg" alt="computer" width="360"
+          /></li>
+          <li
+            ><img src="./images/mobilephone.jpg" alt="mobile phone" width="360"
           /></li>
           <li
             ><img
-              src="/images/synchronization.jpg"
+              src="./images/synchronization.jpg"
               alt="synchronization"
               width="360"
           /></li>
@@ -81,25 +83,25 @@
         <ul>
           <li
             ><img
-              src="/images/markguererro.jpg"
+              src="./images/markguererro.jpg"
               alt="Mark Guererro"
               width="264" />
             <h3>Mark Guererro</h3><p>Product Designer</p></li
           >
           <li
-            ><img src="/images/tomford.jpg" alt="Tom Ford" width="264" />
+            ><img src="./images/tomford.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3><p>Frontend Developer</p></li
           >
           <li
             ><img
-              src="/images/camilagarcia.jpg"
+              src="./images/camilagarcia.jpg"
               alt="Camila Garcia"
               width="264" />
             <h3>Camila Garcia</h3><p>Marketing</p></li
           >
           <li
             ><img
-              src="/images/danielwilson.jpg"
+              src="./images/danielwilson.jpg"
               alt="Daniel Wilson"
               width="264" />
             <h3>Daniel Wilson</h3><p>UI Designer</p></li
